# agent-manager

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/: codex-integration.md  developer-guide.md  framework-adapters.md  positioning.md  product-spec.md  quick-start.zh.md  release.md  roadmap.md  security-audit-checklist.md  team-service.md  technical-design.md  test-plan.md  trace-schema.md  user-guide.md  workflow.md
eval/: answer_quality_cases.json  ci-smoke-answers.json  ci-smoke-dataset.json
examples/simple-agent/: README.md  demo.py
schemas/: trace.schema.json
scripts/: check_release_guardrails.py
